// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createProvider method Should create correct component tree without children 1`] = `
<DS.Observer>
  <div>
    testChild
  </div>
</DS.Observer>
`;

exports[`createProvider method Should create correct component tree without children 2`] = `
<DS.Provider>
  <ScopedProvider
    manager={[Function]}
  >
    <div>
      testChild
    </div>
  </ScopedProvider>
</DS.Provider>
`;

exports[`createProvider method Should create correct component tree without children 3`] = `
<div>
  testChild
</div>
`;

exports[`createProvider method Should create correct component tree without children 4`] = `
<div>
  testChild
</div>
`;

exports[`createProvider method Should render correct component tree 1`] = `
<DS.Observer>
  test
</DS.Observer>
`;

exports[`createProvider method Should render correct component tree 2`] = `
<DS.Provider>
  <ScopedProvider
    manager={[Function]}
  >
    test
  </ScopedProvider>
</DS.Provider>
`;
